SFDC Automation/src/objects/Marketing_Deliverable__c.object
<CustomObject>
    <description>Used to track individual deliverables that are part of a marketing project</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Relates this communication initiative to a specific Ryder customer.</inlineHelpText>
        <label>Related Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PR_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Position__c</fullName>
        <description>describes where the advertisement appeared within the publication book</description>
        <inlineHelpText>describe position of advertisement in publication book</inlineHelpText>
        <label>Ad Position</label>
        <picklist>
            <picklistValues>
                <fullName>Cover - Inside Front or Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover - Outside Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table of Contents (Pg. 1 or 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pages 1 - 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First 1/3 of book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Within Lead Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Artwork_on_Content_Reader_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Artwork on Content (Reader&apos;s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Artwork_on_Shared_Drive_Read_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Artwork on Shared Drive (Read &amp; Print)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Item #</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Author_Guest_Commentator__c</fullName>
        <description>Author or Guest Commentator for post on Exchange.Ryder.com Blog.</description>
        <label>Author/Guest Commentator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Number__c</fullName>
        <label>Booth Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Size__c</fullName>
        <label>Booth Size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Staffing__c</fullName>
        <inlineHelpText>details about who and when the booth will be staffed by Ryder attendees</inlineHelpText>
        <label>Booth Staffing</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bylined_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>indicates if the article was bylined by Ryder</inlineHelpText>
        <label>Bylined Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Categories to be used to identify blog posts.</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Fuels / Natural Gas Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety &amp; Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Line Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_Online_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Online Catalogue (Set-Up)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Approver__c</fullName>
        <label>Client Approver</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <label>Collateral Type</label>
        <picklist>
            <picklistValues>
                <fullName>Article Reprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powerpoint Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Paper</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Americold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APL Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardinal Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterpillar Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEVA (formerly TNT Logistics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH Robinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Con-Way Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRST Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL-Exel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSC Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle Global Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENCO Distribution System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hub Group Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JB Hunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuehne &amp; Nagel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landstar Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LeSaint Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynden Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maersk Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menlo Worldwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Breed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYK Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OIA Global Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ozburn Hessey Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacer Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBB Global Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conference_Room__c</fullName>
        <label>Conference Room</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Form_in_Binder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent Form in Binder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates the individual at CorporateInk who is leading the coverage initiative</inlineHelpText>
        <label>CorporateInk Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>MARCOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Copy Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Copy_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_Completion_Date__c</fullName>
        <label>Copy Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_Person__c</fullName>
        <label>Copy Person</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meredith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copy_Start_Date__c</fullName>
        <label>Copy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_days__c</fullName>
        <description>How many days the copy process has been running</description>
        <formula>if (isnull(Copy_Completion_Date__c),
(TODAY() -  IF(isnull(Copy_Start_Date__c), today(), Copy_Start_Date__c)),
(Copy_Completion_Date__c - Copy_Start_Date__c + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_of_Consent_to_Director__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of Consent to Director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Impression__c</fullName>
        <formula>IF(
 No_of_Impressions_Delivered__c  &gt; 0,
Cost_Value_Per_Record__c  /  No_of_Impressions_Delivered__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Impression</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Value_Per_Record__c</fullName>
        <label>Cost/Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_File_in_SCS_Cabinet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create File in SCS Cabinet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creative__c</fullName>
        <label>Creative</label>
        <picklist>
            <picklistValues>
                <fullName>EGX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JC Alonzo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boom De Yada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliverable_Completion_Date__c</fullName>
        <label>Deliverable Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverable_Days__c</fullName>
        <description>Number of days the deliverable took to complete (if completed) or has been open (if not completed). Completion is assumed if there is a value in the Deliverable Completion Date.</description>
        <formula>if (isnull(Deliverable_Completion_Date__c),
(TODAY() - IF(isnull(Copy_Start_Date__c), today(), Copy_Start_Date__c)),
(Deliverable_Completion_Date__c - Copy_Start_Date__c + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <inlineHelpText>Title of the individual deliverable of a project</inlineHelpText>
        <label>Deliverable Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <inlineHelpText>Required action steps and/or components to support this communication initiative</inlineHelpText>
        <label>Deliverables</label>
        <picklist>
            <picklistValues>
                <fullName>Identified client approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client consent form signed/approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed copies mailed to client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framed copy mailed to client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photography posted to Ryder library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photography sent to client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Added to Ryder POD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print collateral inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reprint Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What&apos;s New Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Aways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Arrangements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant Reservations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agenda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Briefing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Rental(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UVS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Detailed description of this communication initiative</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Design_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Design_Completion_Date__c</fullName>
        <label>Design Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Days__c</fullName>
        <description>Number of days in the design phase</description>
        <formula>if (isnull(Design_Completion_Date__c),
(TODAY() - IF(isnull(Design_Start_Date__c), today(), Design_Start_Date__c)),
(Design_Completion_Date__c - Design_Start_Date__c + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Fees__c</fullName>
        <label>Design Fees</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Person__c</fullName>
        <label>Design Person</label>
        <picklist>
            <picklistValues>
                <fullName>EGX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boom De Yada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JC Alonzo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Start_Date__c</fullName>
        <label>Design Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dismantle_End_Date_Time__c</fullName>
        <label>Dismantle End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dismantle_Start_Date_Time__c</fullName>
        <label>Dismantle Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Distribute_E_mail_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribute - E-mail Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribute_What_s_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribute - What&apos;s New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distribute - Ryder.com</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electronic_Version_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Version Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <inlineHelpText>the last day the event takes place</inlineHelpText>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <inlineHelpText>the first day the event takes place</inlineHelpText>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Website_Link__c</fullName>
        <label>Event Website Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <inlineHelpText>website for the conference/tradeshow/event</inlineHelpText>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Executive__c</fullName>
        <inlineHelpText>The Ryder executive featured, interviewed, speaking, etc.</inlineHelpText>
        <label>Executive Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exhibit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exhibit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Story__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that the coverage is a feature story where Ryder and or Ryder&apos;s client were showcased as the central message</inlineHelpText>
        <label>Feature Story</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Print_Proof_Approval_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Press Proof Approval Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Proof_Approval_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Proof Approval Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Stock_Number__c</fullName>
        <inlineHelpText>This is the stock number for fulfillment and reorders</inlineHelpText>
        <label>Form/Stock Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framed_Copy_to_Client_If_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Framed Copy to Client (If App)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Channel__c</fullName>
        <label>Fulfillment Channel</label>
        <picklist>
            <picklistValues>
                <fullName>RIDE - Brand Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Marketing Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brainshark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inxpo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Completion_Date__c</fullName>
        <label>Fulfillment Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Days__c</fullName>
        <description>Numbers of days in the fulfillment phase</description>
        <formula>if (isnull(Fulfillment_Completion_Date__c),
(TODAY() - IF(isnull(Fulfillment_Start_Date__c), today(), Fulfillment_Start_Date__c)),
(Fulfillment_Completion_Date__c - Fulfillment_Start_Date__c + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Marketing_Fulfillment_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Start_Date__c</fullName>
        <label>Fulfillment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fullfilment_Completion_Notes__c</fullName>
        <label>Fullfilment Completion Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Given_By__c</fullName>
        <inlineHelpText>The entity, such as a publication, customer name, or other third party, issuing the communication (ie. editorial, award, ranking, etc.)</inlineHelpText>
        <label>Given By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Client_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identify Client Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Solicited_by_Media_Outlet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, indicates that Ryder was solicited for this communication opportunity, and did not proactively initiate it.</inlineHelpText>
        <label>Inbound/Solicited by Media Outlet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <description>Landing Page created on Exchange.Ryder.com to capture leads for downloads.</description>
        <label>Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>City and State where event will take place.</inlineHelpText>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_ID__c</fullName>
        <formula>IF(ISPICKVAL(Category__c, &quot;Direct Mail&quot;),&quot;D&quot;,
 IF(ISPICKVAL(Category__c, &quot;EMail&quot;),&quot;E&quot;,
 IF(ISPICKVAL(Category__c, &quot;Case Study&quot;),&quot;MC&quot;,
 IF(ISPICKVAL(Category__c, &quot;White Paper&quot;),&quot;MW&quot;,
 IF(ISPICKVAL(Category__c, &quot;Testimonial&quot;),&quot;MT&quot;,
 IF(ISPICKVAL(Category__c, &quot;Brochure&quot;),&quot;M&quot;,&quot;O&quot;))))))
  &amp; &quot;-&quot; &amp; 
 IF(ISPICKVAL(Project__r.Product_Line__c, &quot;Lease&quot;),&quot;L&quot;,
 IF(ISPICKVAL(Project__r.Product_Line__c, &quot;Rental&quot;),&quot;R&quot;,
 IF(ISPICKVAL(Project__r.Product_Line__c, &quot;Vehicle Sales&quot;),&quot;UV&quot;,&quot;N&quot;)))
 &amp; &quot;-&quot; &amp;  Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Ordered__c</fullName>
        <inlineHelpText>materials on order that were not included with the booth space rental</inlineHelpText>
        <label>Materials Ordered</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Materials_Provided__c</fullName>
        <inlineHelpText>materials (chairs, tables, etc.)  provided/included with the booth space rental</inlineHelpText>
        <label>Materials Provided</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Media_Fee__c</fullName>
        <label>Media Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Outlet__c</fullName>
        <description>The media outlet, such as publication, TV station, or other media source where Ryder editorial or advertising appears.</description>
        <inlineHelpText>The media outlet, such as publication, TV station, or other media source where editorial or advertising appears.</inlineHelpText>
        <label>Media Outlet</label>
        <picklist>
            <picklistValues>
                <fullName>Fleet Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleets &amp; Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Duty Trucking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light &amp; Medium Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport Topics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Media_Placement_Paid__c</fullName>
        <label>Media Placement Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Placement_Value__c</fullName>
        <label>Media Placement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>National_Business_Press__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>indicates if coverage is secured with a National Business Press publication (ie. Wall Street Journal, BusinessWeek, etc.)</inlineHelpText>
        <label>National Business Press</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Click_Through_s_From_Pub__c</fullName>
        <label>Click-Thru (Per Pub)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Click_through_s_Ryder_Verified__c</fullName>
        <label>Click-Thru (PerRyder)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Contacts__c</fullName>
        <label>Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Impressions_Delivered__c</fullName>
        <label>Impressions Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>